feat: fully configure swagger
